--- a/BlazorServer.UI/Properties/Resources.en.resx
+++ b/BlazorServer.UI/Properties/Resources.en.resx
@@ -234,4 +234,25 @@
   <data name="dec" xml:space="preserve">
     <value>Dec</value>
   </data>
+  <data name="no_records" xml:space="preserve">
+    <value>No records</value>
+  </data>
+  <data name="photo" xml:space="preserve">
+    <value>Photo</value>
+  </data>
+  <data name="image" xml:space="preserve">
+    <value>Image</value>
+  </data>
+  <data name="first_name" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="last_name" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="address" xml:space="preserve">
+    <value>Address</value>
+  </data>
+  <data name="city" xml:space="preserve">
+    <value>City</value>
+  </data>
 </root>
