--- a/BlazorServer.UI/Properties/Resources.en.resx
+++ b/BlazorServer.UI/Properties/Resources.en.resx
@@ -255,4 +255,7 @@
   <data name="city" xml:space="preserve">
     <value>City</value>
   </data>
+  <data name="logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
 </root>
