--- a/BlazorServer.UI/Properties/Resources.hr.resx
+++ b/BlazorServer.UI/Properties/Resources.hr.resx
@@ -255,4 +255,7 @@
   <data name="city" xml:space="preserve">
     <value>Grad</value>
   </data>
+  <data name="logout" xml:space="preserve">
+    <value>Odjava</value>
+  </data>
 </root>
